syntax = "proto3";

package psm.state.v1;

import "google/protobuf/descriptor.proto";

option go_package = "github.com/pentops/protostate/gen/state/v1/psm_pb";

extend google.protobuf.MessageOptions {
  StateObjectOptions state = 90443400;
  EventObjectOptions event = 90443401;
  EventTypeObjectOptions event_type = 90443402;
}

message StateObjectOptions {
  string name = 1;
}

message EventObjectOptions {
  string name = 1;
}

message EventTypeObjectOptions {}

extend google.protobuf.FieldOptions {
  EventField event_field = 90443403;
  EventTypeField event_type_field = 90443404;
}

message EventField {
  // the field is the enum wrapper for the event type
  bool event_type = 1;

  // the field contains the metadata for this message
  bool metadata = 2;

  // the field contains a foreign key to the state object. This must be part of
  // the state's primary key
  bool state_key = 3;

  // a non-primary key field used to construct initial state. When this is
  // specified on an event for a state which already exists, it must equal the
  // value in the state after the transition caused by the event.
  bool state_field = 4;
}

message EventTypeField {
  bool sub_key = 1;
}

extend google.protobuf.ServiceOptions {
  StateQueryServiceOptions state_query = 90443405;
}

message StateQueryServiceOptions {
  string name = 1;
}

extend google.protobuf.MethodOptions {
  StateQueryMethodOptions state_query_method = 90443406;
}

message StateQueryMethodOptions {
  bool get = 1;
  bool list = 2;
  bool list_events = 3;

  // use name here instead of the service option to put multiple state query
  // methods in one service
  string name = 4;
}
